fix(mdx-code): adjust alignment and border radius of code block
issue #699

--- a/components/CodeBlocks/Code.module.css
+++ b/components/CodeBlocks/Code.module.css
@@ -1,9 +1,9 @@
 .code {
   @apply relative;
   @apply mt-0 mb-9;
-  @apply px-2 pb-1 pt-10;
+  @apply px-5 pb-1 pt-10;
   @apply bg-dark;
-  @apply rounded-t-none rounded-b-md;
+  @apply rounded-md;
 
   /* TODO: @sabertazimi - Add language specific syntax highlight */
   @apply text-light;
